ASSERTION FAILED: context().isInitialized() ./Modules/webaudio/OfflineAudioDestinationNode.cpp(142) https://bugs.webkit.org/show_bug.cgi?id=224876 <rdar://76896256>

Reviewed by Eric Carlson.

Source/WebCore:

In OfflineAudioDestinationNode::uninitialize(), we were synchronizing with the
render thread to make sure that OfflineAudioDestinationNode::offlineRender() was
done running before proceeding with uninitialization. However, when an audio
worklet is used, m_renderThread is null and no synchronization with the AudioWorklet
thread would happen. This patch adds the missing synchronization with the AudioWorklet
thread when present.

Test: webaudio/OfflineAudioContext/offlineaudiocontext-uninitialized-crash.html

* Modules/webaudio/OfflineAudioDestinationNode.cpp:
(WebCore::OfflineAudioDestinationNode::uninitialize):

LayoutTests:

Add layout test coverage.

* webaudio/OfflineAudioContext/offlineaudiocontext-uninitialized-crash-expected.txt: Added.
* webaudio/OfflineAudioContext/offlineaudiocontext-uninitialized-crash.html: Added.


Canonical link: https://commits.webkit.org/236854@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276379 268f45cc-cd09-0410-ab3c-d52691b4dbfc